# s3-tester

./: .gitignore  .shellspec  LICENSE  README.md  bun.lockb  main.Dockerfile  package.json  profiles.example.yaml  pyproject.toml  replace_configs.sh  tagging.json  test.sh  webhook.py
oci/: README.md  dev.Containerfile  terraform-tools.Containerfile  tests-next.Containerfile  tests.Containerfile  tests.entrypoint.sh  tools.Containerfile
spec/: 001_create-bucket_spec.sh  002_bucket-name-validation_spec.sh  011_bucket-management_spec.sh  018_create-public-bucket_spec.sh  019_access-the-public-bucket-and-check-the-list-of-objects_spec.sh  019_utils.sh  020_access-the-public-bucket-and-check-the-access-of-objects_spec.sh  021_create-private-bucket_spec.sh  022_access-the-private-bucket-and-check-the-list-of-objects_spec.sh  023_create-a-acl-read-for-a-bucket_spec.sh  024_access-the-private-with-acl-bucket-with-and-check-the-list-of-objects_spec.sh  025_access-the-private-with-acl-bucket-and-check-the-access-of-objects_spec.sh  026_create-acl-read-write-for-a-bucket_spec.sh  027_create-acl-in-a-batch-for-more-than-2-ppl-with-option-of-R-and-R-Wdifferents_spec.sh  028_access-the-private-with-acl-bucket-and-check-the-list-of-objects_spec.sh  029_access-the-private-with-acl-bucket-and-check-the-access-of-objects_spec.sh  030_delete-public-bucket_spec.sh  031_delete-private-bucket_spec.sh  032_delete-private-with-acl-bucket_spec.sh  033_copy_url_for_public_buckets_spec.sh  034_validate-the-url-for-public-buckets_spec.sh  035_set-a-presigned-url-for-a-private-bucket_spec.sh  (+57 more)
(+38 files in other folders)
