[tool.poetry]
name = "s3-tester"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
requests = "^2.32.3"
pytest = "^8.3.1"
boto3 = "^1.34.145"
pyspark = "^3.5.1"
plotly = "^5.24.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
